Align wallet correctly

--- a/src/components/Wallet/Wallet.scss
+++ b/src/components/Wallet/Wallet.scss
@@ -2,10 +2,6 @@
 @import '../../misc/misc.module.scss';
 
 .wallet {
-  display: flex;
-  flex-shrink: 100;
-  align-items: center;
-  justify-content: space-between;
   width: auto;
 
   max-width: 550px;
